--- a/spectral_density.ipynb
+++ b/spectral_density.ipynb
@@ -609,7 +609,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "py39",
    "language": "python",
    "name": "python3"
   },
@@ -623,7 +623,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.10"
+   "version": "3.9.19"
   }
  },
  "nbformat": 4,
